tests/cases/fail/list_method_arg_type.p4
def main() -> None:
    xs: list[int] = []
    xs.append(2.5)
